Cycles crash when updating volume #81551

Closed
opened 2020-10-08 20:28:48 +02:00 by Jacques Lucke · 6 comments
Member

System Information
Operating system: Linux-5.8.13-arch1-1-x86_64-with-arch 64 Bits
Graphics card: AMD Radeon RX 5700 (NAVI10, DRM 3.38.0, 5.8.13-arch1-1, LLVM 10.0.1) X.Org 4.6 (Core Profile) Mesa 20.1.8

Blender Version
Broken: version: 2.91.0 Alpha, hash: cac0e78aff
Worked: never probably

  1. Open the file.
  2. Go to render viewport shading.
  3. Toggle hide_viewport of the Icosphere object once or twice.
  4. Crash.

volume_cycles_crash.blend

ASAN consistently outputs P1690.

I found that this can be fixed by commenting out the following line. However, the correct fix is probably be a bit more complex.

diff --git a/intern/cycles/render/image_vdb.cpp b/intern/cycles/render/image_vdb.cpp
index fc2cfe9874e..491f7e4331f 100644
--- a/intern/cycles/render/image_vdb.cpp
+++ b/intern/cycles/render/image_vdb.cpp
@@ -230,7 +230,7 @@ void VDBImageLoader::cleanup()
 {
 #ifdef WITH_OPENVDB
   /* Free OpenVDB grid memory as soon as we can. */
-  grid.reset();
+  // grid.reset();
 - endif
 - ifdef WITH_NANOVDB
   nanogrid.reset();

2020-10-08 20-19-47.mp4

**System Information** Operating system: Linux-5.8.13-arch1-1-x86_64-with-arch 64 Bits Graphics card: AMD Radeon RX 5700 (NAVI10, DRM 3.38.0, 5.8.13-arch1-1, LLVM 10.0.1) X.Org 4.6 (Core Profile) Mesa 20.1.8 **Blender Version** Broken: version: 2.91.0 Alpha, hash: `cac0e78aff` Worked: never probably 1. Open the file. 2. Go to render viewport shading. 3. Toggle `hide_viewport` of the `Icosphere` object once or twice. 4. Crash. [volume_cycles_crash.blend](https://archive.blender.org/developer/F8968666/volume_cycles_crash.blend) ASAN consistently outputs [P1690](https://archive.blender.org/developer/P1690.txt). I found that this can be fixed by commenting out the following line. However, the correct fix is probably be a bit more complex. ``` diff --git a/intern/cycles/render/image_vdb.cpp b/intern/cycles/render/image_vdb.cpp index fc2cfe9874e..491f7e4331f 100644 --- a/intern/cycles/render/image_vdb.cpp +++ b/intern/cycles/render/image_vdb.cpp @@ -230,7 +230,7 @@ void VDBImageLoader::cleanup() { #ifdef WITH_OPENVDB /* Free OpenVDB grid memory as soon as we can. */ - grid.reset(); + // grid.reset(); - endif - ifdef WITH_NANOVDB nanogrid.reset(); ``` [2020-10-08 20-19-47.mp4](https://archive.blender.org/developer/F8968657/2020-10-08_20-19-47.mp4)
Author
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Author
Member

Added subscriber: @brecht

Added subscriber: @brecht

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This issue was referenced by 0d3e192660

This issue was referenced by 0d3e192660bfa231aacf80d3e5a3d750155798ea

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-10-12 16:58:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81551
No description provided.