Fix T81551: Cycles crash updating volume with modifiers

The volume bounds mesh was being rebuilt too often, it should only be done
when rebuilding the BVH as well, otherwise they can go out of sync.